--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
   "dependencies": {
     "@extend-chrome/messages": "^1.2.2",
     "@extend-chrome/storage": "^1.5.0",
+    "@mantine/core": "^4.1.3",
+    "@mantine/hooks": "^4.1.3",
     "@xstate/immer": "^0.3.1",
     "@xstate/react": "^2.0.1",
     "immer": "^9.0.12",
     "lodash": "^4.17.21",
     "nanoid": "^3.3.2",
+    "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-arrow-key-navigation-hook": "^1.0.2",
     "react-detect-click-outside": "^1.1.2",
